<resources>
    <string name="app_name">My Application</string>
    <string name="text_view">Mr Potato Head</string>
    <string name="checkbox1">Arms</string>
    <string name="checkbox2">Ears</string>
    <string name="checkbox3">Eyebrows</string>
    <string name="checkbox4">Eyes</string>
    <string name="checkbox5">Glasses</string>
    <string name="checkbox6">Hat</string>
    <string name="checkbox7">Mouth</string>
    <string name="checkbox8">Mustache</string>
    <string name="checkbox9">Nose</string>
    <string name="checkbox10">Shoes</string>
    <string name="check">Check the boxes to customize your potato!</string>

</resources>
