<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appstudio.maxime.myapplication.MainActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox1"
        android:id="@+id/checkBox"
        android:enabled="false"
        android:checked="false"
        android:button="@drawable/abc_btn_check_material"
        android:clickable="true"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/checkBox6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox2"
        android:id="@+id/checkBox2"
        android:textColor="@android:color/black"
        android:button="@drawable/abc_btn_check_material"
        android:clickable="true"
        android:layout_below="@+id/checkBox8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox3"
        android:id="@+id/checkBox3"
        android:button="@drawable/abc_btn_check_material"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:layout_above="@+id/checkBox5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox4"
        android:id="@+id/checkBox4"
        android:button="@drawable/abc_btn_check_material"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:layout_above="@+id/checkBox3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox5"
        android:id="@+id/checkBox5"
        android:button="@drawable/abc_btn_check_material"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox6"
        android:id="@+id/checkBox6"
        android:clickable="true"
        android:button="@drawable/abc_btn_check_material"
        android:textColor="@android:color/black"
        android:layout_above="@+id/checkBox7"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox7"
        android:id="@+id/checkBox7"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:button="@drawable/abc_btn_check_material"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox4"
        android:layout_alignLeft="@+id/checkBox6"
        android:layout_alignStart="@+id/checkBox6" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox8"
        android:id="@+id/checkBox8"
        android:button="@drawable/abc_btn_check_material"
        android:textColor="@android:color/black"
        android:layout_below="@+id/checkBox7"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_alignStart="@+id/checkBox7" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox9"
        android:id="@+id/checkBox9"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:button="@drawable/abc_btn_check_material"
        android:layout_below="@+id/checkBox8"
        android:layout_alignLeft="@+id/checkBox8"
        android:layout_alignStart="@+id/checkBox8" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox10"
        android:id="@+id/checkBox10"
        android:button="@drawable/abc_btn_check_material"
        android:clickable="true"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/checkBox7"
        android:layout_alignEnd="@+id/checkBox7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/check"
        android:id="@+id/textView2"
        android:layout_above="@+id/checkBox6"
        android:textColor="@android:color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
